force-app/main/default/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>AMS Internal</fullName>
        <description>Used for internal Cases to support AMS efforts.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>AMS Internal HPA</fullName>
        <description>For use with the Health Plan Advisory Request record type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Declined</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__CareGap</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HealthCloudGA__Healthcare</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Escalated</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Servicing</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Forward</fullName>
        </values>
        <values>
            <fullName>In Process</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Replied</fullName>
        </values>
        <values>
            <fullName>Resolved</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Travel</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Completed - Revised%C2%A0</fullName>
        </values>
        <values>
            <fullName>Confirmed with Provider</fullName>
        </values>
        <values>
            <fullName>Left Message for Member%C2%A0</fullName>
        </values>
        <values>
            <fullName>New Request%C2%A0</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Request Cancelled%C2%A0</fullName>
        </values>
        <values>
            <fullName>Request Denied%C2%A0</fullName>
        </values>
        <values>
            <fullName>Travel Booked%C2%A0</fullName>
        </values>
        <values>
            <fullName>Travel Revised%C2%A0</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <formula>Account.Owner.FirstName &amp; &apos; &apos; &amp;  Account.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <inlineHelpText>Please specify additional details regarding your request.</inlineHelpText>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Air_Lodging_Cost__c</fullName>
        <inlineHelpText>Sum of costs from booking information</inlineHelpText>
        <label>Air &amp; Lodging Cost</label>
        <summarizedField>Booking_Information__c.Cost__c</summarizedField>
        <summaryForeignKey>Booking_Information__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Air__c</fullName>
        <description>Used for travel intake</description>
        <label>Air</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>One Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Akamai_Group_Option__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>Akamai Group Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retirees</fullName>
                </value>
                <value>
                    <fullName>Union</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Arriving_Airport__c</fullName>
        <description>Used for travel intake</description>
        <label>Arriving Airport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HI_Airports</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendant_DOB__c</fullName>
        <description>Used For Travel</description>
        <label>Attendant DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attendant_Full_Name__c</fullName>
        <description>Used For Travel</description>
        <label>Attendant Full Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendant_Gender__c</fullName>
        <description>Used For Travel</description>
        <label>Attendant Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age__c</fullName>
        <formula>IF(IsClosed, ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate), 0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Reason_Detail__c</fullName>
        <description>Dependency on case reason</description>
        <label>Case Reason Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulance Services</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health Services</fullName>
                </value>
                <value>
                    <fullName>Cancer Care</fullName>
                </value>
                <value>
                    <fullName>Diagnostic and Therapeutic Services</fullName>
                </value>
                <value>
                    <fullName>Dialysis Services</fullName>
                </value>
                <value>
                    <fullName>Durable Medical Equipment/Supplies</fullName>
                </value>
                <value>
                    <fullName>Emergency and Urgent Care Services</fullName>
                </value>
                <value>
                    <fullName>EPSDT Services</fullName>
                </value>
                <value>
                    <fullName>Family Planning Services</fullName>
                </value>
                <value>
                    <fullName>Hearing Services</fullName>
                </value>
                <value>
                    <fullName>Home Health Services</fullName>
                </value>
                <value>
                    <fullName>Hospice</fullName>
                </value>
                <value>
                    <fullName>Inpatient Hospital Services</fullName>
                </value>
                <value>
                    <fullName>Long-Term Services &amp; Supports</fullName>
                </value>
                <value>
                    <fullName>Medically Related Dental Services</fullName>
                </value>
                <value>
                    <fullName>Non-Emergency Transportation Services</fullName>
                </value>
                <value>
                    <fullName>Nutrition Counseling</fullName>
                </value>
                <value>
                    <fullName>Other Practitioner Services</fullName>
                </value>
                <value>
                    <fullName>Other Facility Services</fullName>
                </value>
                <value>
                    <fullName>Outpatient Hospital Services</fullName>
                </value>
                <value>
                    <fullName>Primary Care Physician Services</fullName>
                </value>
                <value>
                    <fullName>Physician Specialty Services</fullName>
                </value>
                <value>
                    <fullName>Pregnancy and Maternity Care</fullName>
                </value>
                <value>
                    <fullName>Prescription Drugs</fullName>
                </value>
                <value>
                    <fullName>Rehabilitation Services</fullName>
                </value>
                <value>
                    <fullName>Skilled Nursing Facility</fullName>
                </value>
                <value>
                    <fullName>Sleep Lab Test</fullName>
                </value>
                <value>
                    <fullName>Smoking Cessation</fullName>
                </value>
                <value>
                    <fullName>Surgery</fullName>
                </value>
                <value>
                    <fullName>Vision Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use to associate to another case, or a closed case.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <description>QUEST Claims</description>
        <label>Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_ID__c</fullName>
        <description>QUEST Claims</description>
        <label>Claim ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claims_Notes__c</fullName>
        <description>QUEST Claims</description>
        <label>Claims Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used For Travel, once selected request details can not be edited</description>
        <inlineHelpText>Once selected request details cannot be revised.</inlineHelpText>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Template__c</fullName>
        <description>Used on the Contract Request</description>
        <inlineHelpText>Select the needed Contract Template.</inlineHelpText>
        <label>Contract Template</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FIE</fullName>
                </value>
                <value>
                    <fullName>Akamai-MA Only</fullName>
                </value>
                <value>
                    <fullName>Rider-CompCare</fullName>
                </value>
                <value>
                    <fullName>Akamai-MAPD Only</fullName>
                </value>
                <value>
                    <fullName>Akamai-MA and MAPD</fullName>
                </value>
                <value>
                    <fullName>FI-Union</fullName>
                </value>
                <value>
                    <fullName>FI-Metallic</fullName>
                </value>
                <value>
                    <fullName>Rider-Akamai</fullName>
                </value>
                <value>
                    <fullName>Rider-With Insured Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOS__c</fullName>
        <description>QUEST Claims</description>
        <label>DOS</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Output_Type__c</fullName>
        <description>Used on the Group Brochure Request</description>
        <inlineHelpText>Select how you would like the SAS team to prepare the output documents.</inlineHelpText>
        <label>Delivery Output Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mail - Loose Materials</fullName>
                </value>
                <value>
                    <fullName>Mail - Collation into envelopes</fullName>
                </value>
                <value>
                    <fullName>Return to Rep - Loose Materials</fullName>
                </value>
                <value>
                    <fullName>Return to Rep - Collation in Envelopes</fullName>
                </value>
                <value>
                    <fullName>Return to Rep - Soft Copy (Email)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Departing_Airport__c</fullName>
        <description>Used for travel intake</description>
        <label>Departing Airport</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>HI_Airports</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Pulls in the Effective Date from Opportunity for use in List Views.</description>
        <formula>Opportunity__r.Effective_Date__c</formula>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emailed_Travel__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used For Travel</description>
        <label>Emailed Travel?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Form_Quantity__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>How many Enrollment Forms do you need?</inlineHelpText>
        <label>Enrollment Form Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Forms__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>Select the type of enrollment form you want prepared.</inlineHelpText>
        <label>Enrollment Forms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PPP / CompMED / HPH / Choice Dental</fullName>
                    <label>114 - PPP / CompMED / HPH / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / CompMED / HPH / No Dental</fullName>
                    <label>115 - PPP / CompMED / HPH / No Dental</label>
                </value>
                <value>
                    <fullName>PPP / CompMED / Choice Dental</fullName>
                    <label>118 - PPP / CompMED / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / CompMED / No Dental</fullName>
                    <label>119 - PPP / CompMED / No Dental</label>
                </value>
                <value>
                    <fullName>CompMED / HPH / Choice Dental</fullName>
                    <label>120 - CompMED / HPH / Choice Dental</label>
                </value>
                <value>
                    <fullName>CompMED / HPH / No Dental</fullName>
                    <label>121 - CompMED / HPH / No Dental</label>
                </value>
                <value>
                    <fullName>CompMED / HPH-B / Choice Dental</fullName>
                    <label>122 - CompMED / HPH-B / Choice Dental</label>
                </value>
                <value>
                    <fullName>CompMED / HPH-B / No Dental</fullName>
                    <label>123 - CompMED / HPH-B / No Dental</label>
                </value>
                <value>
                    <fullName>CompMED / No Dental</fullName>
                    <label>126 - CompMED / No Dental</label>
                </value>
                <value>
                    <fullName>CompMED / Choice Dental</fullName>
                    <label>127 - CompMED / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / HPH / Choice Dental</fullName>
                    <label>005 - PPP / HPH / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / HPH / No Dental</fullName>
                    <label>006 - PPP / HPH / No Dental</label>
                </value>
                <value>
                    <fullName>PPP / HPH-B / Choice Dental</fullName>
                    <label>007 - PPP / HPH-B / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / HPH-B / No Dental</fullName>
                    <label>008 - PPP / HPH-B / No Dental</label>
                </value>
                <value>
                    <fullName>PPP / Choice Dental</fullName>
                    <label>013 - PPP / Choice Dental</label>
                </value>
                <value>
                    <fullName>PPP / No Dental</fullName>
                    <label>014 - PPP / No Dental</label>
                </value>
                <value>
                    <fullName>HPH / Choice Dental</fullName>
                    <label>015 - HPH / Choice Dental</label>
                </value>
                <value>
                    <fullName>HPH / No Dental</fullName>
                    <label>016 - HPH / No Dental</label>
                </value>
                <value>
                    <fullName>HPH-B / Choice Dental</fullName>
                    <label>019 - HPH-B / Choice Dental</label>
                </value>
                <value>
                    <fullName>HPH-B / No Dental</fullName>
                    <label>020 - HPH-B / No Dental</label>
                </value>
                <value>
                    <fullName>Choice Dental Only</fullName>
                    <label>031 - Choice Dental Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>From_ASR__c</fullName>
        <description>Used on the Contract Request.</description>
        <inlineHelpText>The date ASR returned their deliverable.</inlineHelpText>
        <label>From ASR</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_ECM_Received_GTBs__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>From ECM (Received GTBs)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_ECM__c</fullName>
        <description>Used on the Fully Insured Contract Request.</description>
        <label>From ECM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Legal__c</fullName>
        <label>From Legal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Underwriting__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>From Underwriting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gave_Travel_and_Disclaimer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used For Travel</description>
        <label>Gave Travel and Disclaimer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ground_Service_Codes__c</fullName>
        <label>Ground Service Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory (A0100)</fullName>
                </value>
                <value>
                    <fullName>Gurney (T2005)</fullName>
                </value>
                <value>
                    <fullName>Paratransit (A0130)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ground__c</fullName>
        <description>Used for travel intake</description>
        <label>Ground</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>One Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Brochure_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used on the Benefit Comparison Request.</description>
        <inlineHelpText>Lookup a Group Brochure Request case that this case is associated with.</inlineHelpText>
        <label>Group Brochure Request</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You can only link to &quot;Group Brochure Request&quot; cases.</errorMessage>
            <filterItems>
                <field>Case.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Group_Brochure_Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Benefit Comparison Requests</relationshipLabel>
        <relationshipName>Benefit_Comparison_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guide_to_Benefits_Quantity__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>How many Guide to Benefits (GTB) do you need created?</inlineHelpText>
        <label>Guide to Benefits Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Early_Termination__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>Has Early Termination?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_Retro_Cancallation__c</fullName>
        <description>Used on the Contract Request.</description>
        <label>Has Retro Cancallation?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__DueDate__c</fullName>
        <description>Date by when this care gap should be closed.</description>
        <inlineHelpText>Date by when this care gap should be closed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__FinancialValue__c</fullName>
        <description>Potential savings by closing this care gap.</description>
        <inlineHelpText>Potential savings by closing this care gap.</inlineHelpText>
        <label>Financial Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <description>Rank by which this care gap is sorted.</description>
        <inlineHelpText>Rank by which this care gap is sorted.</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureID__c</fullName>
        <description>ID of the source agency&apos;s measure for this care gap.</description>
        <inlineHelpText>ID of the source agency&apos;s measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgencyMeasureVersion__c</fullName>
        <description>Version of the source agency&apos;s ID measure for this care gap.</description>
        <inlineHelpText>Version of the source agency&apos;s ID measure for this care gap.</inlineHelpText>
        <label>Source Agency Measure Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceAgency__c</fullName>
        <description>Agency that identified the care gap.</description>
        <inlineHelpText>Agency that identified the care gap.</inlineHelpText>
        <label>Source Agency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemID__c</fullName>
        <description>Record ID in the source system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Record ID in the source system.</inlineHelpText>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated.</description>
        <inlineHelpText>When last updated.</inlineHelpText>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <description>Name of the system where this care gap was identified.</description>
        <inlineHelpText>Name of the system where this care gap was identified.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Address__c</fullName>
        <description>Used for Travel intake</description>
        <label>Home Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Home_Island_Ground_Service_Codes__c</fullName>
        <description>Used for Travel intake</description>
        <label>Home Island Ground Service Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory (A0100)</fullName>
                </value>
                <value>
                    <fullName>Gurney (T2005)</fullName>
                </value>
                <value>
                    <fullName>Paratransit (A0130)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Island_Ground__c</fullName>
        <description>Used for Travel intake</description>
        <label>Home Island Ground</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Round Trip</fullName>
                </value>
                <value>
                    <fullName>One Way</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_Hard_Copies__c</fullName>
        <inlineHelpText>Enter the quantity of hard copies you want printed.</inlineHelpText>
        <label>How Many Hard Copies?</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Log__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction_Log__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Due_Date__c</fullName>
        <description>Used on all Internal AMS case types.</description>
        <inlineHelpText>Date by which an internal (e.g. AMS to SAS) case should be completed.</inlineHelpText>
        <label>Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Requestor_to_Review__c</fullName>
        <description>Used on Benefits Comparison Request</description>
        <inlineHelpText>Choose &apos;Yes&apos; if the original Requestor of the documents wants to review them before they go out.</inlineHelpText>
        <label>Internal Requestor to Review?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Internal_Sub_Status__c</fullName>
        <description>Used on several internal case types.</description>
        <inlineHelpText>Select the appropriate reason for putting the Case On Hold.</inlineHelpText>
        <label>Internal Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Coverage Codes</fullName>
                </value>
                <value>
                    <fullName>Missing Coverage Codes</fullName>
                </value>
                <value>
                    <fullName>Missing Information (SAM)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Validation (SAM)</fullName>
                </value>
                <value>
                    <fullName>Awaiting Contract (Legal)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lodge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Travel intake</description>
        <label>Lodge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Rush_Approval_Date__c</fullName>
        <description>Used on several internal case types.</description>
        <inlineHelpText>This field must be filled out by a Manager for the SAS team to work the request as a Rush (as denoted by a Priority value of &quot;High&quot;).</inlineHelpText>
        <label>Manager &quot;Rush&quot; Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for Travel intake</description>
        <label>Meals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_DOB__c</fullName>
        <description>Used for Travel</description>
        <label>Member DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Email_Address__c</fullName>
        <description>Used For Travel</description>
        <label>Member Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member_Full_Name__c</fullName>
        <defaultValue>&quot;Populated From Member Plan&quot;</defaultValue>
        <description>Used for Travel auto-populate with workflow rule</description>
        <label>Member Full Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Gender__c</fullName>
        <defaultValue>&quot;Populated From Member Plan&quot;</defaultValue>
        <description>Used For Travel</description>
        <label>Member Gender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Phone_Primary__c</fullName>
        <description>Used For Travel</description>
        <label>Member Phone Primary</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Phone_Secondary__c</fullName>
        <description>Used for Travel</description>
        <label>Member Phone Secondary</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Member_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Plan</label>
        <referenceTo>MemberPlan</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Misc_Output_Quantity__c</fullName>
        <description>Used on the Group Brochure Request.</description>
        <inlineHelpText>How many copies of the Misc. Output Type documents do you need?</inlineHelpText>
        <label>Misc. Output Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>